--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cali.so",
+  "name": "metaerp.ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx force-resolutions",
     "build": "next build",
     "db:generate": "drizzle-kit generate:mysql",
     "db:push": "drizzle-kit push:mysql",
@@ -12,7 +13,11 @@
     "lint": "next lint",
     "start": "next start"
   },
+"resolutions": {
+  "@types/react": "^18.2.0"
+},  
   "dependencies": {
+    "styled-components": "^5.3.5",    
     "@clerk/nextjs": "^4.21.10",
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
@@ -43,6 +48,7 @@
     "@sanity/ui": "^1.6.0",
     "@sanity/vision": "^3.12.2",
     "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.414",
     "@tremor/react": "^3.2.3",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.21.0",
@@ -83,10 +89,11 @@
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.1.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/styled-components": "^5.1.24",    
     "@types/eslint": "^8.40.2",
     "@types/node": "^18.16.15",
     "@types/prettier": "^2.7.3",
-    "@types/react": "18.2.14",
+    "@types/react": "18.2.0",
     "@types/react-dom": "^18.2.6",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/rss": "^0.0.30",
