--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
     "lint": "next lint",
     "start": "next start"
   },
-"resolutions": {
-  "@types/react": "^18.2.0"
-},  
+  "resolutions": {
+    "@types/react": "^18.2.0"
+  },
   "dependencies": {
-    "styled-components": "^5.3.5",    
-    "@clerk/nextjs": "^4.21.10",
-    "@headlessui/react": "^1.7.15",
-    "@hookform/resolvers": "^3.1.1",
+    "@clerk/nextjs": "^4.29.9",
+    "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^2.3.0",
     "@neondatabase/serverless": "^0.9.0",
-    "@portabletext/react": "^3.0.3",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-hover-card": "^1.0.6",
+    "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.0.6",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/body": "^0.0.2",
     "@react-email/button": "^0.0.9",
     "@react-email/column": "^0.0.7",
@@ -43,76 +42,78 @@
     "@react-email/section": "^0.0.9",
     "@react-email/tailwind": "^0.0.8",
     "@react-email/text": "^0.0.5",
-    "@sanity/code-input": "^4.1.1",
+    "@sanity/code-input": "^4.1.3",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/ui": "^1.6.0",
-    "@sanity/vision": "^3.12.2",
+    "@sanity/ui": "^1.9.3",
+    "@sanity/vision": "^3.33.0",
     "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^0.9.414",
-    "@tremor/react": "^3.2.3",
-    "@upstash/ratelimit": "^0.4.3",
-    "@upstash/redis": "^1.21.0",
-    "@vercel/analytics": "^1.0.1",
+    "@splinetool/runtime": "^0.9.526",
+    "@tremor/react": "^3.14.1",
+    "@upstash/ratelimit": "^0.4.4",
+    "@upstash/redis": "^1.28.4",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/edge-config": "^0.2.1",
     "@zolplay/react": "^0.5.1",
     "@zolplay/utils": "^1.3.4",
     "cheerio": "1.0.0-rc.12",
-    "dayjs": "^1.11.8",
-    "dotenv": "^16.3.1",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "edge-cors": "^0.2.1",
-    "framer-motion": "^10.12.17",
+    "framer-motion": "^10.18.0",
     "hashids": "^2.3.0",
-    "next": "^13.4.7",
-    "next-sanity": "^5.0.2",
+    "next": "^13.5.6",
+    "next-sanity": "^5.5.11",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-email": "^1.9.4",
-    "react-hook-form": "^7.45.0",
+    "react-email": "^1.10.1",
+    "react-hook-form": "^7.51.0",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
     "react-rewards": "^2.0.4",
     "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^2.0.2",
-    "react-wrap-balancer": "^1.0.0",
+    "react-wrap-balancer": "^1.1.0",
     "reading-time": "^1.5.0",
     "remark-gfm": "^3.0.1",
     "resend": "^0.15.3",
     "rss": "^1.2.2",
-    "sanity": "^3.12.2",
-    "sanity-plugin-media": "^2.0.5",
-    "valtio": "^1.10.6",
-    "zod": "^3.21.4"
+    "sanity": "^3.33.0",
+    "sanity-plugin-media": "^2.2.5",
+    "sharp": "^0.33.2",
+    "styled-components": "^5.3.11",
+    "valtio": "^1.13.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.1.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/styled-components": "^5.1.24",    
-    "@types/eslint": "^8.40.2",
-    "@types/node": "^18.16.15",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/eslint": "^8.56.5",
+    "@types/node": "^18.19.23",
     "@types/prettier": "^2.7.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "^18.2.6",
-    "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/rss": "^0.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "autoprefixer": "^10.4.14",
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.20.14",
-    "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.7",
-    "eslint-config-turbo": "^1.10.6",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^13.5.6",
+    "eslint-config-turbo": "^1.12.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.35",
     "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.4.3",
+    "prettier-plugin-packagejson": "^2.4.12",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.4.1",
-    "turbo": "^1.10.6",
+    "turbo": "^1.12.5",
     "typescript": "^5.4.2"
   }
 }
