--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "metaerp.ai",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "preinstall": "npx force-resolutions",
     "build": "next build",
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "dev:email": "email dev -p 3333",
     "dev:turbo": "next dev --turbo",
     "lint": "next lint",
@@ -17,103 +17,108 @@
     "@types/react": "^18.2.0"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.9",
-    "@headlessui/react": "^1.7.18",
-    "@hookform/resolvers": "^3.3.4",
-    "@mdx-js/loader": "^2.3.0",
-    "@neondatabase/serverless": "^0.9.0",
-    "@portabletext/react": "^3.0.11",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-email/body": "^0.0.2",
-    "@react-email/button": "^0.0.9",
-    "@react-email/column": "^0.0.7",
-    "@react-email/container": "^0.0.8",
-    "@react-email/head": "^0.0.5",
-    "@react-email/heading": "^0.0.8",
-    "@react-email/hr": "^0.0.5",
-    "@react-email/html": "^0.0.4",
-    "@react-email/img": "^0.0.5",
-    "@react-email/link": "^0.0.5",
-    "@react-email/preview": "^0.0.6",
-    "@react-email/row": "^0.0.5",
-    "@react-email/section": "^0.0.9",
-    "@react-email/tailwind": "^0.0.8",
-    "@react-email/text": "^0.0.5",
-    "@sanity/code-input": "^4.1.3",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/ui": "^1.9.3",
-    "@sanity/vision": "^3.33.0",
-    "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^0.9.526",
-    "@tremor/react": "^3.14.1",
-    "@upstash/ratelimit": "^0.4.4",
-    "@upstash/redis": "^1.28.4",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/edge-config": "^0.2.1",
+    "@clerk/nextjs": "^6.31.9",
+    "@headlessui/react": "^2.2.7",
+    "@hookform/resolvers": "^5.2.1",
+    "@mdx-js/loader": "^3.1.1",
+    "@neondatabase/serverless": "^1.0.1",
+    "@portabletext/react": "^4.0.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/body": "^0.1.0",
+    "@react-email/button": "^0.2.0",
+    "@react-email/column": "^0.0.13",
+    "@react-email/container": "^0.0.15",
+    "@react-email/head": "^0.0.12",
+    "@react-email/heading": "^0.0.15",
+    "@react-email/hr": "^0.0.11",
+    "@react-email/html": "^0.0.11",
+    "@react-email/img": "^0.0.11",
+    "@react-email/link": "^0.0.12",
+    "@react-email/preview": "^0.0.13",
+    "@react-email/row": "^0.0.12",
+    "@react-email/section": "^0.0.16",
+    "@react-email/tailwind": "^1.2.2",
+    "@react-email/text": "^0.1.5",
+    "@sanity/code-input": "^6.0.1",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/ui": "^3.0.14",
+    "@sanity/vision": "^4.6.1",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.10.56",
+    "@tremor/react": "^3.18.7",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/edge-config": "^1.4.0",
     "@zolplay/react": "^0.5.1",
     "@zolplay/utils": "^1.3.4",
-    "cheerio": "1.0.0-rc.12",
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.1",
+    "cheerio": "1.1.2",
+    "dayjs": "^1.11.18",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "edge-cors": "^0.2.1",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^12.23.12",
     "hashids": "^2.3.0",
-    "next": "^13.5.6",
-    "next-sanity": "^5.5.11",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-email": "^1.10.1",
-    "react-hook-form": "^7.51.0",
-    "react-markdown": "^8.0.7",
+    "next": "^15.5.2",
+    "next-sanity": "^10.0.16",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-email": "^4.2.8",
+    "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
-    "react-rewards": "^2.0.4",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.3",
-    "react-tweet": "^2.0.2",
-    "react-wrap-balancer": "^1.1.0",
+    "react-rewards": "^2.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "react-textarea-autosize": "^8.5.9",
+    "react-tweet": "^3.2.2",
+    "react-wrap-balancer": "^1.1.1",
     "reading-time": "^1.5.0",
-    "remark-gfm": "^3.0.1",
-    "resend": "^0.15.3",
+    "remark-gfm": "^4.0.1",
+    "resend": "^6.0.2",
     "rss": "^1.2.2",
-    "sanity": "^3.33.0",
-    "sanity-plugin-media": "^2.2.5",
-    "sharp": "^0.33.2",
-    "styled-components": "^5.3.11",
-    "valtio": "^1.13.2",
-    "zod": "^3.22.4"
+    "sanity": "^4.6.1",
+    "sanity-plugin-media": "^4.0.0",
+    "sharp": "^0.34.3",
+    "styled-components": "^6.1.19",
+    "valtio": "^2.1.7",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@headlessui/tailwindcss": "^0.1.3",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^18.19.23",
+    "@headlessui/tailwindcss": "^0.2.2",
+    "@next/eslint-plugin-next": "^15.5.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^24.3.1",
     "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.22",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "@types/rss": "^0.0.30",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/rss": "^0.0.32",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^10.4.18",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^13.5.6",
-    "eslint-config-turbo": "^1.12.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "postcss": "^8.4.35",
-    "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.4.12",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.4.1",
-    "turbo": "^1.12.5",
-    "typescript": "^5.4.2"
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.31.4",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2",
+    "eslint-config-turbo": "^2.5.6",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-turbo": "^2.5.6",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-packagejson": "^2.5.19",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^3.4.17",
+    "turbo": "^2.5.6",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0"
   }
 }
