--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "metaerp.ai",
   "version": "0.2.0",
   "private": true,
+  "engines": {"node": "22.x"},
+  "packageManager": "pnpm@10.10.0",
   "scripts": {
     "preinstall": "npx force-resolutions",
     "build": "next build",
