--- a/package.json
+++ b/package.json
@@ -122,5 +122,8 @@
     "turbo": "^2.5.6",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0"
-  }
+  },
+  "eslintConfig": {
+    "ignoreDuringBuilds": true
+  }  
 }
